DL-95: update tests